News UAT/force-app/main/default/objects/Batch_Run_Start_Datetime__c/Batch_Run_Start_Datetime__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Run Start Datetime</label>
</CustomObject>