News UAT/force-app/main/default/objects/Batch_Run_Start_Datetime__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <description>Field is used to capture Last 12 Batch running user Id&#39;s in comma (,) separated format. It will be used to exclude records created by this user in batch job</description>
    <label>Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>