News UAT/force-app/main/default/objects/Batch_Run_Start_Datetime__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <description>Interval between this and next batch run</description>
    <label>Interval (Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>