News UAT/force-app/main/default/objects/Batch_Run_Start_Datetime__c/listViews/All_BRSD.listView-meta.xml
<ListView>
    <fullName>All_BRSD</fullName>
    <columns>NAME</columns>
    <columns>Run_Start_Datetime__c</columns>
    <columns>Filters__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All BRSD</label>
</ListView>